tests/snapshots/tui__add_completion_navigate_down@root.snap
---
source: tests/tui.rs
description: "add → type 'git' → Down"
expression: "snapshot(&mut terminal, session.app())"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 4 },
    content: [
        "────────────────────────────────────────────────────────────────────────────────",
        "❯ git                                                                           ",
        "── github:  ────────────────────────────────────────────────────────────────────",
        " A gitlab:  flake URI                       Diff: Off   Follow: On   flake-edit ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Gray, bg: Rgb(40, 40, 40), underline: Reset, modifier: NONE,
        x: 3, y: 2, fg: Cyan, bg: Rgb(40, 40, 40), underline: Reset, modifier: NONE,
        x: 6, y: 2, fg: Gray, bg: Rgb(40, 40, 40), underline: Reset, modifier: NONE,
        x: 12, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: White, bg: DarkGray, underline: Reset, modifier: BOLD,
        x: 2, y: 3, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 3, fg: Cyan, bg: Rgb(40, 40, 40), underline: Reset, modifier: BOLD,
        x: 6, y: 3, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 12, y: 3, fg: Gray, bg: Rgb(40, 40, 40), underline: Reset, modifier: NONE,
        x: 43, y: 3, fg: White, bg: DarkGray, underline: Reset, modifier: BOLD,
        x: 54, y: 3, fg: Gray, bg: Rgb(40, 40, 40), underline: Reset, modifier: NONE,
        x: 55, y: 3, fg: Cyan, bg: Rgb(40, 40, 40), underline: Reset, modifier: BOLD,
        x: 67, y: 3, fg: Gray, bg: Rgb(40, 40, 40), underline: Reset, modifier: NONE,
        x: 68, y: 3, fg: White, bg: DarkGray, underline: Reset, modifier: BOLD,
    ]
}
