tests/snapshots/tui__add_initial_screen@toplevel_nesting.snap
---
source: tests/tui.rs
expression: "snapshot(&mut terminal, &app)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 4 },
    content: [
        "────────────────────────────────────────────────────────────────────────────────",
        "❯ Type here...                                                                  ",
        "────────────────────────────────────────────────────────────────────────────────",
        " Add  Enter flake URI                                    Diff: Off   flake-edit ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: White, bg: DarkGray, underline: Reset, modifier: BOLD,
        x: 5, y: 3, fg: Gray, bg: Rgb(40, 40, 40), underline: Reset, modifier: NONE,
        x: 56, y: 3, fg: White, bg: DarkGray, underline: Reset, modifier: BOLD,
        x: 67, y: 3, fg: Gray, bg: Rgb(40, 40, 40), underline: Reset, modifier: NONE,
        x: 68, y: 3, fg: White, bg: DarkGray, underline: Reset, modifier: BOLD,
    ]
}
